--- a/web/index.html
+++ b/web/index.html
@@ -1,14 +1,16 @@
-{{define "index"}}
+{{define "index" .}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="/scripts/htmx.min.js"></script>
     <title>Hello, World!</title>
 </head>
 <body>
-    <p>Hello, World!</p>
+    <h1>{{ .Header }}</h1>
+    <p>{{ .Paragraph }}</p>
 
     <script src="/scripts/script.js"></script>
 </body>
